# pylint-nautobot

./: .cookiecutter.json  .dockerignore  .env.example  .flake8  .gitignore  .readthedocs.yaml  .yamllint.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  invoke.example.yml  mkdocs.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  release.yml  upstream_testing.yml
changes/: 130.added  133.breaking
development/: Dockerfile  creds.example.env  development.env  docker-compose.base.yml  docker-compose.dev.yml  nautobot_config.py  towncrier_template.j2
docs/: development.md  getting_started.md  macros.py  release_notes.md  requirements.txt  rules.md
docs/linters/: code_location_changes.md  incorrect_base_classes.md  index.md  replaced_models.md
pylint_nautobot/: __init__.py  code_location_changes.py  constants.py  deprecated_classes.py  deprecated_status_model.py  dunder_filter_fields.py  incorrect_base_class.py  jobresult_on_delete_protect.py  model_label.py  model_label_checker.py  q_search_filter.py  removed_python_code.py  replaced_models.py  status_field.py  status_field_instead_of_status_model.py  string_field_blank_null.py  string_field_null_blank.py  sub_class_name.py  use_fields_all.py  utils.py
pylint_nautobot/data/v2/: v2-database-replaced-models.yaml  v2-removed-code.yaml
pylint_nautobot/data/v3/: v3-code-removals.yaml
tests/: test_checkers.py  test_code_location_changes.py  test_deprecated_classes.py  test_deprecated_status_model.py  test_dunder_filter_fields.py  test_errors.py  test_incorrect_base_class.py  test_jobresult_on_delete_protect.py  test_model_label.py  test_model_label_checker.py  test_q_search_filter.py  test_replaced_models.py  test_string_field_blank_null.py  test_sub_class_name.py  test_use_fields_all.py  test_version_specifiers.py  utils.py
tests/input/: error_nautobot_code_location_changes.py  error_nautobot_code_location_changes.txt  error_nautobot_import_removed_code.py  error_nautobot_import_removed_code.txt  error_nautobot_incorrect_base_class.txt  error_nautobot_replaced_models.py  error_nautobot_replaced_models.txt  error_nautobot_replaced_models_related_object_fields.py  error_nautobot_replaced_models_related_object_fields.txt  error_nautobot_status_field.py  error_nautobot_status_field.txt  error_nautobot_status_field_instead_of_status_model.txt  error_nautobot_string_field_blank_null.py  error_nautobot_string_field_blank_null.txt
tests/inputs/deprecated-classes/: error_add_remove_tags_form.py  error_cable_termination_filter_set.py  error_cable_termination_serializer.py  error_connected_endpoint_serializer.py  error_connection_filter_set.py  error_created_updated_filter_set.py  error_custom_field_bulk_create_form.py  error_custom_field_bulk_edit_form.py  error_custom_field_model_filter_set.py  error_custom_field_model_form.py  error_custom_link_button_class_choices.py  error_device_component_filter_set.py  error_device_type_component_filter_set.py  error_local_context_filter_set.py  error_name_only_filter_test_case.py  error_path_endpoint_filter_set.py  error_plugin_banner.py  error_plugin_config.py  error_plugin_custom_validator.py  error_plugin_filter_extension.py  error_plugin_template_extension.py  error_relationship_model_filter_set.py  error_relationship_model_form.py  error_status_bulk_edit_form_mixin.py  error_status_filter_form_mixin.py  error_tenancy_filter_set.py  good_add_remove_tags_form.py  good_cable_termination_filter_set.py  good_cable_termination_serializer.py  good_connected_endpoint_serializer.py  good_connection_filter_set.py  good_created_updated_filter_set.py  good_custom_field_bulk_create_form.py  good_custom_field_bulk_edit_form.py  good_custom_field_model_filter_set.py  good_custom_field_model_form.py  good_custom_link_button_class_choices.py  good_device_component_filter_set.py  good_device_type_component_filter_set.py  good_local_context_filter_set.py  (+12 more)
tests/inputs/deprecated-status-model/: error_status_model.py
tests/inputs/dunder-filter-fields/: error_filter_set.py  good_filter_set.py
tests/inputs/incorrect-base-class/: error_filter_set.py  error_form.py  error_model.py  error_model_form.py  good_base_model.py  good_filter_set.py  good_form.py  good_model_form.py  good_primary_model.py
tests/inputs/jobresult-on-delete-protect/: error_protect_1to1_direct.py  error_protect_1to1_imported.py  error_protect_1to1_imported_direct.py  error_protect_1to1_imported_string_extras.py  error_protect_1to1_string.py  error_protect_1to1_string_simple.py  error_protect_1to1_to_keyword.py  error_protect_1to1_to_keyword_direct.py  error_protect_1to1_to_keyword_imported.py  error_protect_1to1_to_keyword_imported_direct.py  error_protect_1to1_to_keyword_imported_extras.py  error_protect_1to1_to_keyword_simple.py  error_protect_fk_direct.py  error_protect_fk_imported.py  error_protect_fk_imported_direct.py  error_protect_fk_imported_string_extras.py  error_protect_fk_string.py  error_protect_fk_string_simple.py  error_protect_fk_to_keyword.py  error_protect_fk_to_keyword_direct.py  error_protect_fk_to_keyword_imported.py  error_protect_fk_to_keyword_imported_direct.py  error_protect_fk_to_keyword_imported_extras.py  error_protect_fk_to_keyword_simple.py  good_1to1_cascade.py  good_1to1_cascade_direct.py  good_1to1_cascade_imported.py  good_1to1_no_on_delete.py  good_1to1_no_on_delete_direct.py  good_1to1_no_on_delete_to_keyword.py  good_1to1_set_null_string.py  good_fk_cascade.py  good_fk_cascade_imported.py  good_fk_no_on_delete.py  good_fk_no_on_delete_direct.py  good_fk_no_on_delete_to_keyword.py  good_fk_set_null.py  good_m2m_direct.py  good_m2m_string.py  good_m2m_to_keyword.py  (+1 more)
tests/inputs/q-search-filter/: error_filter_set.py  error_filter_set2.py  error_filter_set3.py  good_filter_set.py  good_filter_set3.py
tests/inputs/string-field-blank-null/: good_field.py
tests/inputs/sub-class-name/: error_filter_form.py  error_filter_set.py  error_model_form.py  (+14 more)
(+8 files in other folders)
